# mislanious_scripts

./: .gitignore  README.md  checkFunc.py  image_hashes.db  interactive_chat_report.html  main.py  mainWithClass.py  media_map.html  muckaround.ipynb  my_interactive_media_map.html  output.csv  playground.ipynb  playground.py  plots.ipynb  pyproject.toml  slider_data.json  test.py  tools.py
GodsPanel/: G80.html
GodsPanel/GodsPanelPresets/: ComputerBuilding.json  Random_jp.json  Universe.json  World1.json  World1_jp.json
Super_Mahjong/: main.py
face_sort/: dbscan.hpp  face  face.cpp  init  init.cpp
inputs/: test.txt
inputs/GodsPanelPresets/: BuildingInfrastructure.json  Life.json  NeuralTest.json  Random.json  World2.json
mahjong_shenannigans/: __init__.py
random_functions/: __init__.py  checkFunc.py  main.py  mainWithClass.py  playground.py  random_functions.py
sandbox/: DPsim.py  G80.py  GodsPanel.py  Line.py  facerecog.py  lnk.py  physicsEngine.py  sandbox.py  sandbox2.py  save.py  schorEQ.py  test.py
stock_market_simulator/: main.py  test.py
testPlaypygame/: __init__.py
time_capsule_handler/: main.py
ultimate_tick_tack_toe/: game.py  iterator.py  players.py
