[tool.poetry]
name = "mislanious-python-scripts"
version = "0.1.0"
description = ""
authors = ["theplatecrafter <theplatecrater@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pytest = "^8.1.1"
pygame = "^2.5.2"
numpy = "^1.26.4"
pillow = "^10.3.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
