[tool.poetry]
name = "mislanious-scripts"
version = "0.1.0"
description = ""
authors = ["theplatecrafter <theplatecrater@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pytest = "^8.1.1"
pygame = "^2.5.2"
numpy = "^1.26.4"
pillow = "^10.3.0"
ipykernel = "^6.29.4"
plotly = "^5.21.0"
pandas = "^2.2.2"
nbformat = "^5.10.4"
autopep8 = "^2.1.0"
rawpy = "^0.21.0"
ffmpeg-python = "^0.2.0"
requests = "^2.32.3"
moviepy = "^1.0.3"
xlsxwriter = "^3.2.0"
exifread = "^3.0.0"
piexif = "^1.1.3"
pymediainfo = "^6.1.0"
mutagen = "^1.47.0"
folium = "^0.17.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
numba = "^0.61.0"
imagehash = "^4.3.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.12.0", python = ">=3.10,<3.14" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"